projects/compiler/test/typechecker/decorators/error_noncomptime_field.abra
decorator Bar {
  p: Person
}

type Person { name: String }
